# rsedis

./: Cargo.toml  DESIGN.md  build.rs
command/: Cargo.toml
command/src/: aof.rs  lib.rs
compat/: Cargo.toml
config/: Cargo.toml
config/src/: lib.rs
database/: Cargo.toml
database/rdbutil/src/: lib.rs
database/src/: dbutil.rs  lib.rs  list.rs  set.rs  string.rs  zset.rs
logger/: Cargo.toml
logger/src/: lib.rs
networking/: Cargo.toml
networking/src/: lib.rs
parser/src/: lib.rs
persistence/: Cargo.toml
persistence/src/: aof.rs
rdbutil/: Cargo.toml
rdbutil/src/: lib.rs
response/: Cargo.toml
response/src/: lib.rs
src/: main.rs
storage/: Cargo.toml  README.md
storage/src/: lib.rs  owning_mmap.rs  tracking_file.rs  util.rs
tests/: integration.rs  test_helper.tcl
tests/support/: server.tcl
util/: Cargo.toml
util/src/: lib.rs
