[package]
name = "jigawatt"
version = "0.0.1"
authors = ["Sebastian Waisbrot <seppo0010@gmail.com>", "Jack Fransham <jack.fransham@elektron.se>"]
exclude = [
    ".gitignore",
    ".travis.yml",
    "appveyor.yml",
]
build = "build.rs"
edition = "2018"

[workspace]
members = [
    "config",
    "util",
    "parser",
    "response",
    "database",
    "command",
    "networking",
    "logger",
    "compat",
    "storage",
]

[[bin]]
name = "jgwt"
path = "src/main.rs"
doc = false

[dependencies]
config = { path = "config" }
networking = { path = "networking" }
logger = { path = "logger" }
compat = { path = "compat" }
