[package]
name = "jigawatt-command"
version = "0.1.0"
authors = ["Sebastian Waisbrot <seppo0010@gmail.com>"]
edition = "2018"

[dependencies]
bitflags = "1.2"
jigawatt-compat = { path = "../compat" }
jigawatt-config = { path = "../config" }
jigawatt-database = { path = "../database" }
jigawatt-logger = { path = "../logger" }
jigawatt-parser = { path = "../parser" }
jigawatt-response = { path = "../response" }
jigawatt-util = { path = "../util" }
