[package]
authors = ["Sebastian Waisbrot <seppo0010@gmail.com>"]
name = "jigawatt-database"
version = "0.1.0"
edition = "2018"

[dependencies]
crc64 = "0.2"
rand = "0.3"
rehashinghashmap = "0.1"
skiplist = "0.3"
basichll = "0.3"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.1"
bincode = "1.3"
jigawatt-config = { path = "../config" }
jigawatt-logger = { path = "../logger" }
jigawatt-parser = { path = "../parser" }
jigawatt-persistence = { path = "../persistence" }
jigawatt-rdbutil = { path = "../rdbutil" }
jigawatt-response = { path = "../response" }
jigawatt-util = { path = "../util" }
jigawatt-storage = { path = "../storage" }
