[package]
name = "jigawatt-networking"
version = "0.1.0"
authors = ["Sebastian Waisbrot <seppo0010@gmail.com>"]
edition = "2018"

[dependencies]
net2 = { version = "0.2.2", features = ["nightly"] }
jigawatt-config = { path = "../config" }
jigawatt-logger = { path = "../logger" }
jigawatt-util = { path = "../util" }
jigawatt-parser = { path = "../parser" }
jigawatt-response = { path = "../response" }
jigawatt-database = { path = "../database" }
jigawatt-command = { path = "../command" }

[target.x86_64-unknown-linux-gnu.dependencies]
fork = "0.1"
unix_socket = "0.4.3"

[target.x86_64-apple-darwin.dependencies]
fork = "0.1"
unix_socket = "0.4.3"
